=====================================================================
	Change Log
	phpGedView

	This and other information can be found online at
	http://www.phpgedview.net

	# $Id$
=====================================================================


Version 4.2.0
 - Fixed: [ 2544257 ] [4942] Show stat's charts ERROR 8's (wooc)
 - Changed: Reduced size of (Fxx) text in Navigator (windmillway)
 - Fixed: [ 2543891 ] Need to refresh to see approved changes (wooc)
 - Fixed: [ 2542150 ] [4927] Cannot add date to MARR when SOUR is present (wooc)
 - Fixed: [ 2536206 ] [4.1.6] Double Date Field on Census Re-edit (wooc)
 - Added: Quick Parents/Step/Immediate Family Page Link on Indi Page Family Navigator (windmillway)
 - Fixed: [ 2524544 ] AddFavourites() not working (canajun2eh)
 - Fixed: [ 2391927 ] Ahnentafel report crashes (ljm)
 - Changed: [ 2534555 ] Modify 'Prefer fact sources' option (canajun2eh)
 - Changed: [ 2481763 ] Change options that control the use of Quick Update (canajun2eh)
 - Changed: [ 2481776 ] Change order of Edit menu entries on Indi and Family pages (canajun2eh)
 - Fixed: [ 2256627 ] Ahnentafel report crashes (ljm)
 - Fixed: [ 2193477 ] [4146] Printer Friendly View Problems (wooc)
 - Fixed: [ 2530481 ] Autocomplete error adding new place (wooc)
 - Fixed: [ 2430622 ] [4548] Places Error Possibly Caused by Autocomplete (wooc)
 - Added: Support for Indonesian (canajun2eh)
 - [ 2530830 ] 4881 Ancestry Chart, Show cousins (fisharebest)
 - [ 2529023 ] 404 on repo/show changes (fisharebest)
 - Changed: new picasa album thumbnail (windmillway)
 - Fixed: [ 2495330 ] [4720] indilist shows married names not obeying config (fisharebest)
 - Fixed: [ 2521772 ] [4784] Serious bug in places (fisharebest)
 - Fixed: [ 2521121 ] [4841] - ASSO tag not linked (fisharebest)
 - Changed: Slightly improved picasa thumbnail appearance on Simplyxxx themes (windmillway)