@@ -266,6 +266,8 @@ $pgv_lang["HIDE_LIVE_PEOPLE"]		= "Enable Privacy";
 $pgv_lang["HIDE_LIVE_PEOPLE_help"]	= "~#pgv_lang[HIDE_LIVE_PEOPLE]#~<br /><br />This option will enable all privacy settings and hide the details of living people.<br /><br />Living people are defined to be those who do not have an event more recent than the number of years specified in variable \$MAX_ALIVE_AGE.  For this purpose, births of children are considered to be such events as well.<br />";
 $pgv_lang["REQUIRE_AUTHENTICATION"]	= "Require visitor authentication";
 $pgv_lang["REQUIRE_AUTHENTICATION_help"]	= "~#pgv_lang[REQUIRE_AUTHENTICATION]#~<br /><br />Enabling this option will force all visitors to login before they can view any data on the site.<br />";
+$pgv_lang["PAGE_AFTER_LOGIN"]		= "Page to show after Login";
+$pgv_lang["PAGE_AFTER_LOGIN_help"]	= "~#pgv_lang[PAGE_AFTER_LOGIN]#~<br /><br />Which page should users see after they have logged in?<br /><br />The choice made here determines whether a successful Login causes the #pgv_lang[welcome_page]# or the #pgv_lang[mygedview]# page to appear when the logs in from the #pgv_lang[welcome_page]#.<br /><br />A Login done from the link at the top of every other page will return the user to that page.<br />";
 $pgv_lang["WELCOME_TEXT_AUTH_MODE"]	= "Welcome text on Login page";
 $pgv_lang["WELCOME_TEXT_AUTH_MODE_help"]	= "~#pgv_lang[WELCOME_TEXT_AUTH_MODE]#~<br /><br />Here you can choose text to appear on the login screen. You must determine which predefined text is most appropriate.<br /><br />You can also choose to enter your own custom Welcome text, but the text you enter will not be translated when your users change language.  However, if your custom text contains references to language variables that you can define in the various <i>languages/extra.xx.php</i> files, your site can show translated text.  Please refer to the Help text associated with the <b>#pgv_lang[WELCOME_TEXT_AUTH_MODE_CUST]#</b> field for more information.<br /><br />The predefined texts are:<ul><li><b>#pgv_lang[WELCOME_TEXT_AUTH_MODE_OPT1]#:</b><div class=\"list_value_wrap\">#pgv_lang[welcome_text_auth_mode_1]#</div><br/></li><li><b>#pgv_lang[WELCOME_TEXT_AUTH_MODE_OPT2]#:</b><div class=\"list_value_wrap\">#pgv_lang[welcome_text_auth_mode_2]#</div><br/></li><li><b>#pgv_lang[WELCOME_TEXT_AUTH_MODE_OPT3]#:</b><div class=\"list_value_wrap\">#pgv_lang[welcome_text_auth_mode_3]#</div></li></ul>";
 $pgv_lang["WELCOME_TEXT_AUTH_MODE_OPT0"]	= "No predefined text";
