@@ -114,7 +114,7 @@ $pgv_lang["view_gedcom"]			= "View GEDCOM Record";
 $pgv_lang["welcome"]				= "Welcome";
 $pgv_lang["son"]					= "Son";
 $pgv_lang["daughter"]				= "Daughter";
-$pgv_lang["welcome_page"]			= "Welcome Page";
+$pgv_lang["welcome_page"]			= "Welcome page";
 $pgv_lang["editowndata"]			= "My Account";
 $pgv_lang["user_admin"] 			= "User administration";
 $pgv_lang["manage_media"]			= "Manage Media";
